@@ -1,5 +1,11 @@
 2011-02-07 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/z80/ralloc2.cc,
+	  src/z80/gen.c:
+	  Avoid result overwriting operand bug in |.
+
+2011-02-07 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/SDCCtree_dec.hpp,
 	  src/SDCCralloc.hpp,
 	  src/z80/ralloc2.cc:
